      is backwards incompatible behavior. [ticket:1243]

- postgres
    - Calling alias.execute() in conjunction with
      server_side_cursors won't raise AttributeError.

- oracle
    - Adjusted the format of create_xid() to repair
      two-phase commit.   We now have field reports
      of Oracle two-phase commit working properly
      with this change.
      
0.5.0rc4
========
- features
- orm
    - Query.count() has been enhanced to do the "right
      thing" in a wider variety of cases. It can now
      count multiple-entity queries, as well as
      column-based queries. Note that this means if you
      say query(A, B).count() without any joining
      criterion, it's going to count the cartesian
      product of A*B. Any query which is against
      column-based entities will automatically issue
      "SELECT count(1) FROM (SELECT...)" so that the
      real rowcount is returned, meaning a query such as
      query(func.count(A.name)).count() will return a value of
      one, since that query would return one row.
    
    - Lots of performance tuning.  A rough guesstimate 
      over various ORM operations places it 10% faster 
      over 0.5.0rc3, 25-30% over 0.4.8.
      
- bugfixes and behavioral changes
- general:
    - global "propigate"->"propagate" change.

- orm
    - Adjustments to the enhanced garbage collection on 
      InstanceState to better guard against errors due 
      to lost state.

    - Query.get() returns a more informative
      error message when executed against multiple entities.
      [ticket:1220]

    - Restored NotImplementedError on Cls.relation.in_()
      [ticket:1140] [ticket:1221]
      
    - Fixed PendingDeprecationWarning involving order_by
      parameter on relation(). [ticket:1226]
      
- sql
    - Removed the 'properties' attribute of the 
      Connection object, Connection.info should be used.
    
    - Restored "active rowcount" fetch before ResultProxy